<resources>
    <string name="app_name">Password Manager</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="confPass">Confirm Password</string>
    <string name="name">Name</string>
    <string name="emailSent">Please check your email to verify your email address.</string>
    <string name="passMan">Password Manager</string>
    <string name="password_visible_or_not">Password Visible or not</string>
    <string name="confirm_password_visible_or_not">Confirm Password Visible or not</string>
    <string name="notApprovedYet">This device is not approved yet.\n\nYou must approve this device from one of your already approved devices.\n\nOnce approved, you will be able to access your accounts.\n\nThe original device is approved automatically.\n\nIf you have more than one additional device to add, please feel free to add them all before approving.\n\nPlease close the app for now.</string>
    <string name="devices">Devices</string>
    <string name="passwords">Passwords</string>
    <string name="loading">Loading…</string>
    <string name="go2pass">Go To Passwords</string>
    <string name="save">Save</string>
    <string name="nickname">Nickname</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="thisdeviceneedsapproved">This device is not approved.\n\nIf you would like to approve this device, please enter the confirmation code and click approve.\n\nIf you would like to deny this device, please press the deny button.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="go2dev">Go To Devices</string>
    <string name="itemName">Company/Website/App/Channel</string>
    <string name="copy">Copy</string>
    <string name="resetPW">Reset Password</string>
    <string name="newPass">New Password</string>
    <string name="confNewPass">Confirm New Password</string>
    <string name="pwmust">Error: Password must contain:\nAt least 12 digits\nAt least 1 lowercase letter\nAt least 1 uppercase letter\nAt least 1 number\nAt least 1 special character</string>
    <string name="delDev">Delete Device</string>
    <string name="device">Device Information</string>
    <string name="evpw">Password Information</string>
    <string name="addapw">Add a Password Record</string>
</resources>