<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageButton
        android:id="@+id/ibCancelFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/roundbutton"
        android:foregroundTint="@color/white"
        android:scaleType="center"
        android:scaleX="1.7"
        android:scaleY="1.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etFPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="75dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/green"
        android:padding="10sp"
        android:text="@string/resetPW"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFPConfPass" />

    <EditText
        android:id="@+id/etFPPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:padding="10sp"
        android:background="@color/white"
        android:hint="@string/newPass"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFPEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etFPConfPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:textSize="20sp"
        android:hint="@string/confNewPass"
        android:padding="10sp"
        android:background="@color/white"
        android:textColor="@color/green"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFPPass"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="75dp"
        android:text="@string/pwmust"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />

    <ImageButton
        android:id="@+id/ibFPPasswordVis"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:contentDescription="@string/password_visible_or_not"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etFPPass"
        app:layout_constraintEnd_toEndOf="@+id/etFPPass"
        app:layout_constraintTop_toTopOf="@+id/etFPPass" />

    <ImageButton
        android:id="@+id/ibFPConfPasswordVis"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:contentDescription="@string/confirm_password_visible_or_not"

        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etFPConfPass"
        app:layout_constraintEnd_toEndOf="@+id/etFPConfPass"
        app:layout_constraintTop_toTopOf="@+id/etFPConfPass" />

</androidx.constraintlayout.widget.ConstraintLayout>