<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <EditText
        android:id="@+id/etRegName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:paddingStart="10sp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:hint="@string/email"
        android:textColor="@color/green"
        android:paddingStart="10sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegName"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etRegPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:paddingStart="10sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegEmail"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etRegConfPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:hint="@string/confPass"
        android:textColor="@color/green"
        android:paddingStart="10sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegPass"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegConfPass" />

    <ImageButton
        android:id="@+id/ibPasswordVis"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etRegPass"
        app:layout_constraintEnd_toEndOf="@+id/etRegPass"
        app:layout_constraintTop_toTopOf="@+id/etRegPass" />

    <ImageButton
        android:id="@+id/ibConfPasswordVis"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/etRegConfPass"
        app:layout_constraintEnd_toEndOf="@+id/etRegConfPass"
        app:layout_constraintTop_toTopOf="@+id/etRegConfPass" />

</androidx.constraintlayout.widget.ConstraintLayout>